@@ -5,7 +5,7 @@ from eea.themecentre.themecentre import getTheme
 from eea.mediacentre.browser.interfaces import IMediaPortlet
 from Products.CMFPlone import utils
 from p4a.video.interfaces import IMediaPlayer
-from p4a.video.browser.video import VideoPageView
+#from p4a.video.browser.video import VideoPageView
 from eea.mediacentre.interfaces import IMediaCentre
 from eea.mediacentre.mediacentre import MEDIA_SEARCH_KEY
 
@@ -15,7 +15,7 @@ class MediaPortlet(BasePortlet):
     def media_player(self):
         """ Returns an html snippet for showing a video.
             This works for the formats that p4avideo supports. """
-        context = utils.context(self)
+        #context = utils.context(self)
         if self.items:
             media_file = self.items[0]['object']
             mime_type = media_file.get_content_type()
@@ -32,8 +32,8 @@ class MediaPortlet(BasePortlet):
         return item
 
     def all_link(self):
-        mediacentre = getUtility(IMediaCentre)
-        media_types = mediacentre.getMediaTypes()
+        #mediacentre = getUtility(IMediaCentre)
+        #media_types = mediacentre.getMediaTypes()
         template = self.media_type + 's'
 
         context = utils.context(self)
@@ -45,7 +45,7 @@ class MediaPortlet(BasePortlet):
         mediacentre = getUtility(IMediaCentre)
         query= { MEDIA_SEARCH_KEY: {'theme': theme} }
         files = mediacentre.getMedia(self.media_type, 1, search=query)
-        self.items = files
+        #self.items = files
         return files
 
     def short_items(self, media_type):
