@@ -4,8 +4,8 @@ from zope.app.annotation.interfaces import IAnnotations
 from zope.app.schema.vocabulary import IVocabularyFactory
 from zope.schema.vocabulary import SimpleTerm, SimpleVocabulary
 from zope.component import adapts
-from zope.interface import implements, alsoProvides, directlyProvidedBy
-from zope.interface import directlyProvides
+from zope.interface import implements #, alsoProvides, directlyProvidedBy
+#from zope.interface import directlyProvides
 from persistent.dict import PersistentDict
 from persistent.list import PersistentList
 
@@ -27,19 +27,19 @@ class MediaTypesAdapter(object):
             mapping = annotations[KEY] = PersistentDict(mediafile)
         self.mapping = mapping
 
-    def types():
-        def get(self):
-            anno = IAnnotations(self.context)
-            mapping = anno.get(KEY)
-            return mapping['types']
-        def set(self, values):
-            anno = IAnnotations(self.context)
-            mapping = anno.get(KEY)
-            mapping['types'] = PersistentList(values)
+    #def types():
+    def gett(self):
+        anno = IAnnotations(self.context)
+        mapping = anno.get(KEY)
+        return mapping['types']
+    def sett(self, values):
+        anno = IAnnotations(self.context)
+        mapping = anno.get(KEY)
+        mapping['types'] = PersistentList(values)
 
-            self.context.reindexObject()
-        return property(get, set)
-    types = types()
+        self.context.reindexObject()
+    #return property(get, set)
+    types = property(gett, sett)
 
 class MediaTypesImageAdapter(object):
     implements(IMediaType)
@@ -48,13 +48,13 @@ class MediaTypesImageAdapter(object):
     def __init__(self, context):
         self.context = context
 
-    def types():
-        def get(self):
-            return ['image']
-        def set(self):
-            pass
-        return property(get, set)
-    types = types()
+    #def types():
+    def gett(self):
+        return ['image']
+    def sett(self):
+        pass
+    #return property(get, set)
+    types = property(gett, sett)
 
 class MediaTypesVocabulary(object):
     implements(IVocabularyFactory)
